[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/jsob_guides/music_guides.gd" type="Script" id=1]
[ext_resource path="res://addons/jsob_guides/name_label.gd" type="Script" id=2]

[node name="MusicGuides" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1014.0
margin_bottom = 20.0

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 870.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 7
valign = 1
autowrap = true
script = ExtResource( 2 )

[node name="StreamLoad" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 874.0
margin_right = 1014.0
margin_bottom = 20.0
text = "Load AudioStream..."

[node name="GuideBtn" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1014.0
margin_bottom = 510.0
size_flags_vertical = 3
action_mode = 0
text = "Click for guide"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 514.0
margin_right = 1014.0
margin_bottom = 534.0

[node name="AudioSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 990.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
step = 0.0

[node name="TimeButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 994.0
margin_right = 1014.0
margin_bottom = 20.0
text = "<"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 538.0
margin_right = 1014.0
margin_bottom = 562.0

[node name="PlayBtn" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 385.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = ">"

[node name="PauseBtn" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 389.0
margin_right = 775.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "||"

[node name="ClipboardBtn" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 779.0
margin_right = 851.0
margin_bottom = 24.0
text = "Clipboard"

[node name="ClearBtn" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 855.0
margin_right = 899.0
margin_bottom = 24.0
text = "Clear"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 903.0
margin_top = 5.0
margin_right = 936.0
margin_bottom = 19.0
hint_tooltip = "The BPM is used to quantize the value"
mouse_filter = 0
text = "BPM:"

[node name="QuantizeBPM" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
margin_left = 940.0
margin_right = 1014.0
margin_bottom = 24.0
max_value = 10000.0
value = 100.0
allow_greater = true
allow_lesser = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 566.0
margin_right = 1014.0
margin_bottom = 590.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 344.0
margin_top = 5.0
margin_right = 428.0
margin_bottom = 19.0
text = "Test guide nÂ°"

[node name="TestPosSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 432.0
margin_right = 506.0
margin_bottom = 24.0
max_value = 0.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 510.0
margin_top = 5.0
margin_right = 549.0
margin_bottom = 19.0
text = "Value:"

[node name="TestValueSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 553.0
margin_right = 627.0
margin_bottom = 24.0
max_value = 1e+13
step = 0.6
allow_greater = true
allow_lesser = true

[node name="TestBtn" type="Button" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 631.0
margin_right = 670.0
margin_bottom = 24.0
text = "Test"

[node name="TestFlash" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ClearDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -37.5
margin_right = 168.5
margin_bottom = 37.5
rect_min_size = Vector2( 150, 52.5 )
window_title = "Per Favore Conferma..."
dialog_text = "Are you sure you want to clear the current guides?
This can't be undone!!!"

[node name="StreamDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_left = 63.0
margin_top = 83.0
margin_right = 722.0
margin_bottom = 476.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Apri un file"
mode = 0
filters = PoolStringArray( "*.mp3", "*.mp3str", "*.ogg", "*.oggstr", "*.res", "*.tres" )

[connection signal="stream_recieved" from="VBoxContainer/HBoxContainer/NameLabel" to="." method="set_stream"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StreamLoad" to="." method="_on_StreamLoad_pressed"]
[connection signal="pressed" from="VBoxContainer/GuideBtn" to="." method="_on_GuideBtn_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/AudioSlider" to="." method="_on_AudioSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TimeButton" to="." method="_on_TimeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/PauseBtn" to="." method="_on_PauseBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/ClipboardBtn" to="." method="_on_ClipboardBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/ClearBtn" to="." method="_on_ClearBtn_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/QuantizeBPM" to="." method="_on_QuantizeBPM_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/TestPosSpinBox" to="." method="_on_TestPosSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/TestValueSpinBox" to="." method="_on_TestValueSpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/TestBtn" to="." method="_on_TestBtn_pressed"]
[connection signal="confirmed" from="ClearDialog" to="." method="_on_ClearDialog_confirmed"]
[connection signal="file_selected" from="StreamDialog" to="." method="_on_StreamDialog_file_selected"]
